--- a/index.html
+++ b/index.html
@@ -17,20 +17,39 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <script src="https://kit.fontawesome.com/15d5aa64cb.js"></script>
   <script src="jquery.visible.min.js"></script>
   <script src="scripts.js"></script>
 </head>
 
 <body class="background">
 
+  <nav class="navbar navbar-expand sticky-top navbar-dark">
+    <a class="navbar-brand" href="#"></a> <!-- logo here if I want -->
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">home</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="#">about me</a>
+      </li>
+      <li class="nav-item ">
+          <a class="nav-link" href="#">experience</a>
+      </li>
+      <li class="nav-item ">
+          <a class="nav-link" href="#">projects</a>
+      </li>
+    </ul>
+  </nav>
 
   <div class="container-social">
-      <div class="animationIcon" style="bottom: 0px; height: 200px;">Hey!</div>
-      <div class="animationIcon" style="bottom: 0px; height: 180px;">Connor!</div>
-      <div class="animationIcon" style="bottom: 0px; height: 160px;">add</div>
-      <div class="animationIcon" style="bottom: 0px; height: 140px;">social</div>
-      <div class="animationIcon" style="bottom: 0px; height: 120px;">buttons</div>
-      <div class="animationIcon" style="bottom: 0px; height: 100px;">here</div>
+      <div style="bottom: 0px; height: 140px;"  class="animationIcon"><a href="https://github.com/436F6E6E6F72"><i class="fab fa-github fa-lg"></i></a></div>
+      <div><a href="https://www.linkedin.com/in/connor-adams-15779964/"><i style="bottom: 0px; height: 110px;" class="fab fa-linkedin fa-lg animationIcon"></i></a></div>
+      <div><a href="//"><i style="bottom: 0px; height: 80px;" class="far fa-envelope fa-lg animationIcon"></i></a></div>
+      <!-- <div class="animationIcon" style="bottom: 0px; height: 120px;">social</div>
+      <div class="animationIcon" style="bottom: 0px; height: 100px;">buttons</div>
+      <div class="animationIcon" style="bottom: 0px; height: 80px;">here</div> -->
     </div>
 
   <div class="container">
